--- a/TodoList/src/main/resources/application.properties
+++ b/TodoList/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.datasource.password=wellness29
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
 spring.batch.job.enabled=false
-spring:
-  profiles:
-    active: @spring.profiles.active@
-  security:
+---
+#spring:
+#  profiles:
+#   active: @spring.profiles.active@
+#  security:
