--- a/TodoList/src/main/resources/application.properties
+++ b/TodoList/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=wellness29
+spring.datasource.username=insert your database username
+spring.datasource.password=insert your database password
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
 spring.batch.job.enabled=false
